fix for script questions being too long

--- a/chat/components/Chat.module.css
+++ b/chat/components/Chat.module.css
@@ -143,7 +143,7 @@
 	margin:1rem 0 1rem auto;
 	padding: 1rem;
 	text-align: right;
-	width: max-content;
+	width: fit-content;
 
 }
 .scriptQuestionText{
